[package]
name = "lab"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3.21"
futures-executor = "0.3.21"
smol = "1.2.5"
rand = "0.8.4"

[profile.release]
#codegen-units = 1
#lto = true

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio", "async_std", "async_smol", "async_futures", "async"] }

[[bench]]
name = "my_benchmark"
harness = false
